--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link rel="stylesheet" href="./Assets/Css/style.css">
+  <link rel="stylesheet" href="Assets/Css/style.css">
     <title>HOMECARE</title>
 </head>
 <body class="bg-light">
@@ -118,7 +118,7 @@
   <div class="row  ">
     <div class="col-sm-12 col-md-6  col-lg-6 col-xl-6 d-flex justify-content-between Details ">
       <div class="image detail-img" >
-        <img src="./Img/8.jpg" class="rounded w-75">
+        <img src="Assets/Img/8.jpg" class="rounded w-75">
       </div>
     </div>
     <div class="col-sm-12 col-md-6  col-lg-6 col-xl-6">
@@ -136,7 +136,7 @@
   <div class="row justify-content-center mt-5">
     <div class="col-12 col-sm-6 col-md-4 col-lg-4 mb-4">
       <div class="card Products shadow">
-        <img class="card-img-top" src="./Img/10.png" alt="Card image cap">
+        <img class="card-img-top" src="Assets/Img/10.png" alt="Card image cap">
         <div class="card-body d-flex justify-content-between">
           <p class="card-text">Calisa</p>
           <p class="card-text">200<span class="price">$</span></p>
@@ -145,7 +145,7 @@
     </div>
     <div class="col-12 col-sm-6 col-md-4 col-lg-4 mb-4">
       <div class="card Products shadow">
-        <img class="card-img-top" src="./Img/9.jpg" alt="Card image cap">
+        <img class="card-img-top" src="Assets/Img/9.jpg" alt="Card image cap">
         <div class="card-body d-flex justify-content-between">
           <p class="card-text">Calisa</p>
           <p class="card-text">200<span class="price">$</span></p>
@@ -154,7 +154,7 @@
     </div>
     <div class="col-12 col-sm-6 col-md-4 col-lg-4 mb-4">
       <div class="card Products shadow">
-        <img class="card-img-top" src="./Img/14.png" alt="Card image cap">
+        <img class="card-img-top" src="Assets/Img/14.png" alt="Card image cap">
         <div class="card-body d-flex justify-content-between">
           <p class="card-text">Calisa</p>
           <p class="card-text">200<span class="price">$</span></p>
