--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="row  mt-5 mb-5">
     <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4">
       <div class="card  shadow">
-        <img class="card-img-top" src="./Img/12.png" alt="Card image cap">
+        <img class="card-img-top" src="Assets/Img/12.png" alt="Card image cap">
         <div class="card-body d-flex justify-content-between">
           <p class="card-text">Calisa</p>
           <p class="card-text">200<span class="price">$</span></p>
@@ -63,7 +63,7 @@
     </div>
     <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4">
       <div class="card shadow">
-        <img class="card-img-top" src="./Img/13.png" alt="Card image cap">
+        <img class="card-img-top" src="Assets/Img/13.png" alt="Card image cap">
         <div class="card-body d-flex justify-content-between">
           <p class="card-text">Calisa</p>
           <p class="card-text">200<span class="price">$</span></p>
@@ -72,7 +72,7 @@
     </div>
     <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4">
       <div class="card shadow">
-        <img class="card-img-top" src="./Img/12.jpg" alt="Card image cap">
+        <img class="card-img-top" src="Assets/Img/12.jpg" alt="Card image cap">
         <div class="card-body d-flex justify-content-between">
           <p class="card-text">Calisa</p>
           <p class="card-text">200<span class="price">$</span></p>
@@ -81,7 +81,7 @@
     </div>
     <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4">
       <div class="card shadow">
-        <img class="card-img-top" src="./Img/11.png" alt="Card image cap">
+        <img class="card-img-top" src="Assets/Img/11.png" alt="Card image cap">
         <div class="card-body d-flex justify-content-between">
           <p class="card-text">Calisa</p>
           <p class="card-text">200<span class="price">$</span></p>
